# trader

./: .gitignore  README.md  dev.sh  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_api.sh  run_bot.sh  sample.bat  trader.db
backend/opend/: Dockerfile  entrypoint.sh
backend/scripts/: e2e_test.sh  fetch_alpaca_bars.py  fetch_latest_tweet.py  generate_md5.sh  set_twitter_cookie_manual.py  smoke_alpaca.py  smoke_moomoo.py  test_moomoo_connection.py  twitter_auth.py  twitter_auth_chrome.py  twitter_auth_firefox.py  twitter_auth_manual.py  twitter_auth_persistent.py
backend/src/api/: dashboard.html  main.py
backend/src/app/: backtest.py  config.py  cookie_store.py  db.py  models.py  performance.py  risk.py  schemas.py  utils.py
backend/src/broker/: __init__.py  alpaca_client.py  base.py  mock_client.py  moomoo_client.py  paper.py
backend/src/llm/: base.py  openai_client.py
backend/src/workers/: scheduler.py  twitter_auth_helper.py  twitter_poll.py
frontend/: Dockerfile  eslint.config.cjs  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/pages/: Dashboard.tsx
