[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trader-backend"
version = "0.1.0"
description = "Trader backend services."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "pydantic==2.9.2",
    "sqlmodel==0.0.22",
    "apscheduler==3.10.4",
    "python-dotenv==1.0.1",
    "httpx==0.27.2",
    "websockets==12.0",
    "discord.py==2.4.0",
    "openai==1.42.0",
    #"twitter-api-client==0.13.1",
    "futu-api<15",
]

[tool.uv]
